<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/securityLevel"
            android:icon="@drawable/ic_security_black"
            android:title="@string/security_level" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_black"
            android:title="@string/about" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_exit_to_app_black"
            android:title="@string/log_out" />

    </group>
</menu>