<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_style"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--xmlns:tools="http://schemas.android.com/tools"-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp" />


        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/user_name"
            android:textAlignment="center"
            android:id="@+id/userName"/>


        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/password"
            android:textAlignment="center"
            android:id="@+id/password" />

        <Button
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_style"
            android:text="@string/sign_in"
            android:textColor="@color/editText"
            android:onClick="signIn"
            android:id="@+id/signIn"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:textColor="@color/editText"
            android:textColorHighlight="@color/btn_firstColor"
            android:text="@string/create_vault"
            android:onClick="signUp"/>

</LinearLayout>
