<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.entrance.FirebaseTest_Activity"
    android:background="@drawable/new_back">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newRecord"
        android:textColor="#80FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/category_Spinner"
        android:layout_marginBottom="15dp"
        android:textSize="30dp"
        />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Save Record"
        android:onClick="saveRecord"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Password"
        android:background="@drawable/btn_style"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/FetchData"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Fetch Data"
        android:onClick="FetchData"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp"
        android:background="@drawable/btn_cancel_style"
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/data_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/FetchData"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:layout_marginStart="50dp"
        android:text="Fetch Data"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/category_Spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:entries="@array/typesOfRecord"
        android:inputType="text"
        android:maxLines="1"
        android:spinnerMode="dialog"
        android:paddingStart="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:background="@drawable/form_style"
        />

    <EditText
        android:id="@+id/EditText_Website"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:paddingStart="14dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_Spinner"
        android:background="@drawable/form_style"
        android:hint="@string/website"/>

    <EditText
        android:id="@+id/TextView_Name"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:paddingStart="14dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Website"
        android:background="@drawable/form_style"
        android:hint="@string/user_name"/>


    <EditText
        android:id="@+id/TextView_Password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:paddingStart="14dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Name"
        android:background="@drawable/form_style"
        android:hint="@string/password"/>
</androidx.constraintlayout.widget.ConstraintLayout>
